Add /cars endpoint documentation
